# lazywm

./: .gitignore  CMakeLists.txt
src/: WindowManager.cpp  WindowManager.h  compositor.cpp  compositor.h  config_manager.cpp  config_manager.h  event_bus.cpp  event_bus.h  input_manager.cpp  input_manager.h  ipc_manager.cpp  ipc_manager.h  log_manager.cpp  log_manager.h  main.cpp  monitor_manager.cpp  monitor_manager.h  plugin_manager.cpp  plugin_manager.h  session_manager.cpp  session_manager.h  state_store.cpp  state_store.h  window_layout_manager.cpp  window_layout_manager.h  window_manager.cpp  window_manager.h  workspace_manager.h
